ConEmu 160612 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=160609
-location_arc=2847888,x293D0ADA,https://github.com/Maximus5/ConEmu/releases/download/v16.06.09/ConEmuPack.160609.7z
-location_exe=5483040,x7FA83ABF,https://github.com/Maximus5/ConEmu/releases/download/v16.06.09/ConEmuSetup.160609.exe
-md5_arc=7dbcff644a0dc7e1e7b59a1b6ca73baa
-md5_exe=68ddbbd6e573c4bb11fb8d9ec23fe945
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160609.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160609.exe?use_mirror=autoselect
+version=160612
+location_arc=2851292,x9BA1FD76,https://github.com/Maximus5/ConEmu/releases/download/v16.06.12/ConEmuPack.160612.7z
+location_exe=5482016,x030FBFAB,https://github.com/Maximus5/ConEmu/releases/download/v16.06.12/ConEmuSetup.160612.exe
+md5_arc=d6df2616d25dd1c3d7c28dd8f93669f9
+md5_exe=24807b0e389f520c038c28f688ac6ca8
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160612.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160612.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160609
-location_arc=2847888,x293D0ADA,https://github.com/Maximus5/ConEmu/releases/download/v16.06.09/ConEmuPack.160609.7z
-location_exe=5483040,x7FA83ABF,https://github.com/Maximus5/ConEmu/releases/download/v16.06.09/ConEmuSetup.160609.exe
-md5_arc=7dbcff644a0dc7e1e7b59a1b6ca73baa
-md5_exe=68ddbbd6e573c4bb11fb8d9ec23fe945
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160609.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160609.exe?use_mirror=autoselect
+version=160612
+location_arc=2851292,x9BA1FD76,https://github.com/Maximus5/ConEmu/releases/download/v16.06.12/ConEmuPack.160612.7z
+location_exe=5482016,x030FBFAB,https://github.com/Maximus5/ConEmu/releases/download/v16.06.12/ConEmuSetup.160612.exe
+md5_arc=d6df2616d25dd1c3d7c28dd8f93669f9
+md5_exe=24807b0e389f520c038c28f688ac6ca8
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160612.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160612.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160609
-location_arc=2847888,x293D0ADA,https://github.com/Maximus5/ConEmu/releases/download/v16.06.09/ConEmuPack.160609.7z
-location_exe=5483040,x7FA83ABF,https://github.com/Maximus5/ConEmu/releases/download/v16.06.09/ConEmuSetup.160609.exe
-md5_arc=7dbcff644a0dc7e1e7b59a1b6ca73baa
-md5_exe=68ddbbd6e573c4bb11fb8d9ec23fe945
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160609.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160609.exe?use_mirror=autoselect
+version=160612
+location_arc=2851292,x9BA1FD76,https://github.com/Maximus5/ConEmu/releases/download/v16.06.12/ConEmuPack.160612.7z
+location_exe=5482016,x030FBFAB,https://github.com/Maximus5/ConEmu/releases/download/v16.06.12/ConEmuSetup.160612.exe
+md5_arc=d6df2616d25dd1c3d7c28dd8f93669f9
+md5_exe=24807b0e389f520c038c28f688ac6ca8
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160612.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160612.exe?use_mirror=autoselect
