ConEmu 160619 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=160612
-location_arc=2851292,x9BA1FD76,https://github.com/Maximus5/ConEmu/releases/download/v16.06.12/ConEmuPack.160612.7z
-location_exe=5482016,x030FBFAB,https://github.com/Maximus5/ConEmu/releases/download/v16.06.12/ConEmuSetup.160612.exe
-md5_arc=d6df2616d25dd1c3d7c28dd8f93669f9
-md5_exe=24807b0e389f520c038c28f688ac6ca8
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160612.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160612.exe?use_mirror=autoselect
+version=160619
+location_arc=2850848,x9E050D7A,https://github.com/Maximus5/ConEmu/releases/download/v16.06.19/ConEmuPack.160619.7z
+location_exe=5482528,x58055A75,https://github.com/Maximus5/ConEmu/releases/download/v16.06.19/ConEmuSetup.160619.exe
+md5_arc=dc6381de0a0f62096aa59a11cc4c4c32
+md5_exe=bc6ef3b2a38dcdad2a6279d4f746f8e4
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160619.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160619.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160612
-location_arc=2851292,x9BA1FD76,https://github.com/Maximus5/ConEmu/releases/download/v16.06.12/ConEmuPack.160612.7z
-location_exe=5482016,x030FBFAB,https://github.com/Maximus5/ConEmu/releases/download/v16.06.12/ConEmuSetup.160612.exe
-md5_arc=d6df2616d25dd1c3d7c28dd8f93669f9
-md5_exe=24807b0e389f520c038c28f688ac6ca8
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160612.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160612.exe?use_mirror=autoselect
+version=160619
+location_arc=2850848,x9E050D7A,https://github.com/Maximus5/ConEmu/releases/download/v16.06.19/ConEmuPack.160619.7z
+location_exe=5482528,x58055A75,https://github.com/Maximus5/ConEmu/releases/download/v16.06.19/ConEmuSetup.160619.exe
+md5_arc=dc6381de0a0f62096aa59a11cc4c4c32
+md5_exe=bc6ef3b2a38dcdad2a6279d4f746f8e4
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160619.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160619.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160612
-location_arc=2851292,x9BA1FD76,https://github.com/Maximus5/ConEmu/releases/download/v16.06.12/ConEmuPack.160612.7z
-location_exe=5482016,x030FBFAB,https://github.com/Maximus5/ConEmu/releases/download/v16.06.12/ConEmuSetup.160612.exe
-md5_arc=d6df2616d25dd1c3d7c28dd8f93669f9
-md5_exe=24807b0e389f520c038c28f688ac6ca8
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160612.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160612.exe?use_mirror=autoselect
+version=160619
+location_arc=2850848,x9E050D7A,https://github.com/Maximus5/ConEmu/releases/download/v16.06.19/ConEmuPack.160619.7z
+location_exe=5482528,x58055A75,https://github.com/Maximus5/ConEmu/releases/download/v16.06.19/ConEmuSetup.160619.exe
+md5_arc=dc6381de0a0f62096aa59a11cc4c4c32
+md5_exe=bc6ef3b2a38dcdad2a6279d4f746f8e4
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160619.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160619.exe?use_mirror=autoselect
