ConEmu 160707 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=160619
-location_arc=2850848,x9E050D7A,https://github.com/Maximus5/ConEmu/releases/download/v16.06.19/ConEmuPack.160619.7z
-location_exe=5482528,x58055A75,https://github.com/Maximus5/ConEmu/releases/download/v16.06.19/ConEmuSetup.160619.exe
-md5_arc=dc6381de0a0f62096aa59a11cc4c4c32
-md5_exe=bc6ef3b2a38dcdad2a6279d4f746f8e4
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160619.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160619.exe?use_mirror=autoselect
+version=160707
+location_arc=2858908,x9A63FB3D,https://github.com/Maximus5/ConEmu/releases/download/v16.07.07/ConEmuPack.160707.7z
+location_exe=5484064,x54432BE8,https://github.com/Maximus5/ConEmu/releases/download/v16.07.07/ConEmuSetup.160707.exe
+md5_arc=72be2ecc07d691fe0465d691cbf722d8
+md5_exe=8d60de4e57d7a43a816c58a9f90a2730
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160707.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160707.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160619
-location_arc=2850848,x9E050D7A,https://github.com/Maximus5/ConEmu/releases/download/v16.06.19/ConEmuPack.160619.7z
-location_exe=5482528,x58055A75,https://github.com/Maximus5/ConEmu/releases/download/v16.06.19/ConEmuSetup.160619.exe
-md5_arc=dc6381de0a0f62096aa59a11cc4c4c32
-md5_exe=bc6ef3b2a38dcdad2a6279d4f746f8e4
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160619.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160619.exe?use_mirror=autoselect
+version=160707
+location_arc=2858908,x9A63FB3D,https://github.com/Maximus5/ConEmu/releases/download/v16.07.07/ConEmuPack.160707.7z
+location_exe=5484064,x54432BE8,https://github.com/Maximus5/ConEmu/releases/download/v16.07.07/ConEmuSetup.160707.exe
+md5_arc=72be2ecc07d691fe0465d691cbf722d8
+md5_exe=8d60de4e57d7a43a816c58a9f90a2730
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160707.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160707.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160619
-location_arc=2850848,x9E050D7A,https://github.com/Maximus5/ConEmu/releases/download/v16.06.19/ConEmuPack.160619.7z
-location_exe=5482528,x58055A75,https://github.com/Maximus5/ConEmu/releases/download/v16.06.19/ConEmuSetup.160619.exe
-md5_arc=dc6381de0a0f62096aa59a11cc4c4c32
-md5_exe=bc6ef3b2a38dcdad2a6279d4f746f8e4
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160619.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160619.exe?use_mirror=autoselect
+version=160707
+location_arc=2858908,x9A63FB3D,https://github.com/Maximus5/ConEmu/releases/download/v16.07.07/ConEmuPack.160707.7z
+location_exe=5484064,x54432BE8,https://github.com/Maximus5/ConEmu/releases/download/v16.07.07/ConEmuSetup.160707.exe
+md5_arc=72be2ecc07d691fe0465d691cbf722d8
+md5_exe=8d60de4e57d7a43a816c58a9f90a2730
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160707.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160707.exe?use_mirror=autoselect
