ConEmu 160724 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=160710
-location_arc=2858733,xDE12D7BC,https://github.com/Maximus5/ConEmu/releases/download/v16.07.10/ConEmuPack.160710.7z
-location_exe=5505056,xEE33ACBA,https://github.com/Maximus5/ConEmu/releases/download/v16.07.10/ConEmuSetup.160710.exe
-md5_arc=69943ec3ae4d9e27b502975872b15ac0
-md5_exe=eb6c6ed125569fd6bb1a694069e6934b
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160710.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160710.exe?use_mirror=autoselect
+version=160724
+location_arc=2859234,xA4128901,https://github.com/Maximus5/ConEmu/releases/download/v16.07.24/ConEmuPack.160724.7z
+location_exe=5505568,xB928826E,https://github.com/Maximus5/ConEmu/releases/download/v16.07.24/ConEmuSetup.160724.exe
+md5_arc=adcff21ebfa870dc1279e38345e8a753
+md5_exe=6ceb9e05e9d6b4f363c30cf238752ef0
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160724.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160724.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160710
-location_arc=2858733,xDE12D7BC,https://github.com/Maximus5/ConEmu/releases/download/v16.07.10/ConEmuPack.160710.7z
-location_exe=5505056,xEE33ACBA,https://github.com/Maximus5/ConEmu/releases/download/v16.07.10/ConEmuSetup.160710.exe
-md5_arc=69943ec3ae4d9e27b502975872b15ac0
-md5_exe=eb6c6ed125569fd6bb1a694069e6934b
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160710.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160710.exe?use_mirror=autoselect
+version=160724
+location_arc=2859234,xA4128901,https://github.com/Maximus5/ConEmu/releases/download/v16.07.24/ConEmuPack.160724.7z
+location_exe=5505568,xB928826E,https://github.com/Maximus5/ConEmu/releases/download/v16.07.24/ConEmuSetup.160724.exe
+md5_arc=adcff21ebfa870dc1279e38345e8a753
+md5_exe=6ceb9e05e9d6b4f363c30cf238752ef0
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160724.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160724.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160710
-location_arc=2858733,xDE12D7BC,https://github.com/Maximus5/ConEmu/releases/download/v16.07.10/ConEmuPack.160710.7z
-location_exe=5505056,xEE33ACBA,https://github.com/Maximus5/ConEmu/releases/download/v16.07.10/ConEmuSetup.160710.exe
-md5_arc=69943ec3ae4d9e27b502975872b15ac0
-md5_exe=eb6c6ed125569fd6bb1a694069e6934b
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160710.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160710.exe?use_mirror=autoselect
+version=160724
+location_arc=2859234,xA4128901,https://github.com/Maximus5/ConEmu/releases/download/v16.07.24/ConEmuPack.160724.7z
+location_exe=5505568,xB928826E,https://github.com/Maximus5/ConEmu/releases/download/v16.07.24/ConEmuSetup.160724.exe
+md5_arc=adcff21ebfa870dc1279e38345e8a753
+md5_exe=6ceb9e05e9d6b4f363c30cf238752ef0
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160724.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160724.exe?use_mirror=autoselect
