ConEmu 160828 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=160724
-location_arc=2859234,xA4128901,https://github.com/Maximus5/ConEmu/releases/download/v16.07.24/ConEmuPack.160724.7z
-location_exe=5505568,xB928826E,https://github.com/Maximus5/ConEmu/releases/download/v16.07.24/ConEmuSetup.160724.exe
-md5_arc=adcff21ebfa870dc1279e38345e8a753
-md5_exe=6ceb9e05e9d6b4f363c30cf238752ef0
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160724.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160724.exe?use_mirror=autoselect
+version=160828
+location_arc=2826980,x453E66EC,https://github.com/Maximus5/ConEmu/releases/download/v16.08.28/ConEmuPack.160828.7z
+location_exe=5473312,x9463F6B7,https://github.com/Maximus5/ConEmu/releases/download/v16.08.28/ConEmuSetup.160828.exe
+md5_arc=c13bcb232f38b32df85bb7e7866411fe
+md5_exe=1ae2f7bfba70ccc696c38116952499c5
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160828.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160828.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160724
-location_arc=2859234,xA4128901,https://github.com/Maximus5/ConEmu/releases/download/v16.07.24/ConEmuPack.160724.7z
-location_exe=5505568,xB928826E,https://github.com/Maximus5/ConEmu/releases/download/v16.07.24/ConEmuSetup.160724.exe
-md5_arc=adcff21ebfa870dc1279e38345e8a753
-md5_exe=6ceb9e05e9d6b4f363c30cf238752ef0
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160724.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160724.exe?use_mirror=autoselect
+version=160828
+location_arc=2826980,x453E66EC,https://github.com/Maximus5/ConEmu/releases/download/v16.08.28/ConEmuPack.160828.7z
+location_exe=5473312,x9463F6B7,https://github.com/Maximus5/ConEmu/releases/download/v16.08.28/ConEmuSetup.160828.exe
+md5_arc=c13bcb232f38b32df85bb7e7866411fe
+md5_exe=1ae2f7bfba70ccc696c38116952499c5
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160828.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160828.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160724
-location_arc=2859234,xA4128901,https://github.com/Maximus5/ConEmu/releases/download/v16.07.24/ConEmuPack.160724.7z
-location_exe=5505568,xB928826E,https://github.com/Maximus5/ConEmu/releases/download/v16.07.24/ConEmuSetup.160724.exe
-md5_arc=adcff21ebfa870dc1279e38345e8a753
-md5_exe=6ceb9e05e9d6b4f363c30cf238752ef0
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160724.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160724.exe?use_mirror=autoselect
+version=160828
+location_arc=2826980,x453E66EC,https://github.com/Maximus5/ConEmu/releases/download/v16.08.28/ConEmuPack.160828.7z
+location_exe=5473312,x9463F6B7,https://github.com/Maximus5/ConEmu/releases/download/v16.08.28/ConEmuSetup.160828.exe
+md5_arc=c13bcb232f38b32df85bb7e7866411fe
+md5_exe=1ae2f7bfba70ccc696c38116952499c5
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160828.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160828.exe?use_mirror=autoselect
