ConEmu 160904 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=160828
-location_arc=2826980,x453E66EC,https://github.com/Maximus5/ConEmu/releases/download/v16.08.28/ConEmuPack.160828.7z
-location_exe=5473312,x9463F6B7,https://github.com/Maximus5/ConEmu/releases/download/v16.08.28/ConEmuSetup.160828.exe
-md5_arc=c13bcb232f38b32df85bb7e7866411fe
-md5_exe=1ae2f7bfba70ccc696c38116952499c5
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160828.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160828.exe?use_mirror=autoselect
+version=160904
+location_arc=2829180,x35A94FA0,https://github.com/Maximus5/ConEmu/releases/download/v16.09.04/ConEmuPack.160904.7z
+location_exe=5474848,x357ED5DF,https://github.com/Maximus5/ConEmu/releases/download/v16.09.04/ConEmuSetup.160904.exe
+md5_arc=fd8738cf885918f1d2fbdbd5a85699ff
+md5_exe=a5a365a9623c50e75e124c813f018680
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160904.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160904.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160828
-location_arc=2826980,x453E66EC,https://github.com/Maximus5/ConEmu/releases/download/v16.08.28/ConEmuPack.160828.7z
-location_exe=5473312,x9463F6B7,https://github.com/Maximus5/ConEmu/releases/download/v16.08.28/ConEmuSetup.160828.exe
-md5_arc=c13bcb232f38b32df85bb7e7866411fe
-md5_exe=1ae2f7bfba70ccc696c38116952499c5
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160828.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160828.exe?use_mirror=autoselect
+version=160904
+location_arc=2829180,x35A94FA0,https://github.com/Maximus5/ConEmu/releases/download/v16.09.04/ConEmuPack.160904.7z
+location_exe=5474848,x357ED5DF,https://github.com/Maximus5/ConEmu/releases/download/v16.09.04/ConEmuSetup.160904.exe
+md5_arc=fd8738cf885918f1d2fbdbd5a85699ff
+md5_exe=a5a365a9623c50e75e124c813f018680
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160904.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160904.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160828
-location_arc=2826980,x453E66EC,https://github.com/Maximus5/ConEmu/releases/download/v16.08.28/ConEmuPack.160828.7z
-location_exe=5473312,x9463F6B7,https://github.com/Maximus5/ConEmu/releases/download/v16.08.28/ConEmuSetup.160828.exe
-md5_arc=c13bcb232f38b32df85bb7e7866411fe
-md5_exe=1ae2f7bfba70ccc696c38116952499c5
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160828.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160828.exe?use_mirror=autoselect
+version=160904
+location_arc=2829180,x35A94FA0,https://github.com/Maximus5/ConEmu/releases/download/v16.09.04/ConEmuPack.160904.7z
+location_exe=5474848,x357ED5DF,https://github.com/Maximus5/ConEmu/releases/download/v16.09.04/ConEmuSetup.160904.exe
+md5_arc=fd8738cf885918f1d2fbdbd5a85699ff
+md5_exe=a5a365a9623c50e75e124c813f018680
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160904.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160904.exe?use_mirror=autoselect
