--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=160904
-location_arc=2829180,x35A94FA0,https://github.com/Maximus5/ConEmu/releases/download/v16.09.04/ConEmuPack.160904.7z
-location_exe=5474848,x357ED5DF,https://github.com/Maximus5/ConEmu/releases/download/v16.09.04/ConEmuSetup.160904.exe
-md5_arc=fd8738cf885918f1d2fbdbd5a85699ff
-md5_exe=a5a365a9623c50e75e124c813f018680
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160904.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160904.exe?use_mirror=autoselect
+version=160913
+location_arc=2828775,x2BAC50C4,https://github.com/Maximus5/ConEmu/releases/download/v16.09.13/ConEmuPack.160913.7z
+location_exe=5479216,x8AEBAF65,https://github.com/Maximus5/ConEmu/releases/download/v16.09.13/ConEmuSetup.160913.exe
+md5_arc=3d5842d1e6f82128e8cedc807dd01bb0
+md5_exe=63c4cee7843e75f36c13be4f8491c11a
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160913.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160913.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160904
-location_arc=2829180,x35A94FA0,https://github.com/Maximus5/ConEmu/releases/download/v16.09.04/ConEmuPack.160904.7z
-location_exe=5474848,x357ED5DF,https://github.com/Maximus5/ConEmu/releases/download/v16.09.04/ConEmuSetup.160904.exe
-md5_arc=fd8738cf885918f1d2fbdbd5a85699ff
-md5_exe=a5a365a9623c50e75e124c813f018680
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160904.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160904.exe?use_mirror=autoselect
+version=160913
+location_arc=2828775,x2BAC50C4,https://github.com/Maximus5/ConEmu/releases/download/v16.09.13/ConEmuPack.160913.7z
+location_exe=5479216,x8AEBAF65,https://github.com/Maximus5/ConEmu/releases/download/v16.09.13/ConEmuSetup.160913.exe
+md5_arc=3d5842d1e6f82128e8cedc807dd01bb0
+md5_exe=63c4cee7843e75f36c13be4f8491c11a
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160913.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160913.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160904
-location_arc=2829180,x35A94FA0,https://github.com/Maximus5/ConEmu/releases/download/v16.09.04/ConEmuPack.160904.7z
-location_exe=5474848,x357ED5DF,https://github.com/Maximus5/ConEmu/releases/download/v16.09.04/ConEmuSetup.160904.exe
-md5_arc=fd8738cf885918f1d2fbdbd5a85699ff
-md5_exe=a5a365a9623c50e75e124c813f018680
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160904.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160904.exe?use_mirror=autoselect
+version=160913
+location_arc=2828775,x2BAC50C4,https://github.com/Maximus5/ConEmu/releases/download/v16.09.13/ConEmuPack.160913.7z
+location_exe=5479216,x8AEBAF65,https://github.com/Maximus5/ConEmu/releases/download/v16.09.13/ConEmuSetup.160913.exe
+md5_arc=3d5842d1e6f82128e8cedc807dd01bb0
+md5_exe=63c4cee7843e75f36c13be4f8491c11a
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160913.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160913.exe?use_mirror=autoselect
