ConEmu 160914 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=160913
-location_arc=2828775,x2BAC50C4,https://github.com/Maximus5/ConEmu/releases/download/v16.09.13/ConEmuPack.160913.7z
-location_exe=5479216,x8AEBAF65,https://github.com/Maximus5/ConEmu/releases/download/v16.09.13/ConEmuSetup.160913.exe
-md5_arc=3d5842d1e6f82128e8cedc807dd01bb0
-md5_exe=63c4cee7843e75f36c13be4f8491c11a
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160913.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160913.exe?use_mirror=autoselect
+version=160914
+location_arc=2827349,x0D976C94,https://github.com/Maximus5/ConEmu/releases/download/v16.09.14/ConEmuPack.160914.7z
+location_exe=5480752,xC95616EA,https://github.com/Maximus5/ConEmu/releases/download/v16.09.14/ConEmuSetup.160914.exe
+md5_arc=bc612432fce0a2d7f8d01edccbe0b95a
+md5_exe=1ac934ebce0a80e17dc31577100e93b8
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160914.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160914.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160913
-location_arc=2828775,x2BAC50C4,https://github.com/Maximus5/ConEmu/releases/download/v16.09.13/ConEmuPack.160913.7z
-location_exe=5479216,x8AEBAF65,https://github.com/Maximus5/ConEmu/releases/download/v16.09.13/ConEmuSetup.160913.exe
-md5_arc=3d5842d1e6f82128e8cedc807dd01bb0
-md5_exe=63c4cee7843e75f36c13be4f8491c11a
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160913.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160913.exe?use_mirror=autoselect
+version=160914
+location_arc=2827349,x0D976C94,https://github.com/Maximus5/ConEmu/releases/download/v16.09.14/ConEmuPack.160914.7z
+location_exe=5480752,xC95616EA,https://github.com/Maximus5/ConEmu/releases/download/v16.09.14/ConEmuSetup.160914.exe
+md5_arc=bc612432fce0a2d7f8d01edccbe0b95a
+md5_exe=1ac934ebce0a80e17dc31577100e93b8
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160914.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160914.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160913
-location_arc=2828775,x2BAC50C4,https://github.com/Maximus5/ConEmu/releases/download/v16.09.13/ConEmuPack.160913.7z
-location_exe=5479216,x8AEBAF65,https://github.com/Maximus5/ConEmu/releases/download/v16.09.13/ConEmuSetup.160913.exe
-md5_arc=3d5842d1e6f82128e8cedc807dd01bb0
-md5_exe=63c4cee7843e75f36c13be4f8491c11a
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160913.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160913.exe?use_mirror=autoselect
+version=160914
+location_arc=2827349,x0D976C94,https://github.com/Maximus5/ConEmu/releases/download/v16.09.14/ConEmuPack.160914.7z
+location_exe=5480752,xC95616EA,https://github.com/Maximus5/ConEmu/releases/download/v16.09.14/ConEmuSetup.160914.exe
+md5_arc=bc612432fce0a2d7f8d01edccbe0b95a
+md5_exe=1ac934ebce0a80e17dc31577100e93b8
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160914.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160914.exe?use_mirror=autoselect
