ConEmu 161002 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=160914
-location_arc=2827349,x0D976C94,https://github.com/Maximus5/ConEmu/releases/download/v16.09.14/ConEmuPack.160914.7z
-location_exe=5480752,xC95616EA,https://github.com/Maximus5/ConEmu/releases/download/v16.09.14/ConEmuSetup.160914.exe
-md5_arc=bc612432fce0a2d7f8d01edccbe0b95a
-md5_exe=1ac934ebce0a80e17dc31577100e93b8
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160914.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160914.exe?use_mirror=autoselect
+version=161002
+location_arc=2829668,x2ADF0BA7,https://github.com/Maximus5/ConEmu/releases/download/v16.10.02/ConEmuPack.161002.7z
+location_exe=5482288,xEB19438B,https://github.com/Maximus5/ConEmu/releases/download/v16.10.02/ConEmuSetup.161002.exe
+md5_arc=06b4f50ea083518b08bb31bf75fb5e04
+md5_exe=1980ff97baa437b8fe0532dd720249be
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161002.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161002.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160914
-location_arc=2827349,x0D976C94,https://github.com/Maximus5/ConEmu/releases/download/v16.09.14/ConEmuPack.160914.7z
-location_exe=5480752,xC95616EA,https://github.com/Maximus5/ConEmu/releases/download/v16.09.14/ConEmuSetup.160914.exe
-md5_arc=bc612432fce0a2d7f8d01edccbe0b95a
-md5_exe=1ac934ebce0a80e17dc31577100e93b8
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160914.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160914.exe?use_mirror=autoselect
+version=161002
+location_arc=2829668,x2ADF0BA7,https://github.com/Maximus5/ConEmu/releases/download/v16.10.02/ConEmuPack.161002.7z
+location_exe=5482288,xEB19438B,https://github.com/Maximus5/ConEmu/releases/download/v16.10.02/ConEmuSetup.161002.exe
+md5_arc=06b4f50ea083518b08bb31bf75fb5e04
+md5_exe=1980ff97baa437b8fe0532dd720249be
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161002.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161002.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160914
-location_arc=2827349,x0D976C94,https://github.com/Maximus5/ConEmu/releases/download/v16.09.14/ConEmuPack.160914.7z
-location_exe=5480752,xC95616EA,https://github.com/Maximus5/ConEmu/releases/download/v16.09.14/ConEmuSetup.160914.exe
-md5_arc=bc612432fce0a2d7f8d01edccbe0b95a
-md5_exe=1ac934ebce0a80e17dc31577100e93b8
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160914.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160914.exe?use_mirror=autoselect
+version=161002
+location_arc=2829668,x2ADF0BA7,https://github.com/Maximus5/ConEmu/releases/download/v16.10.02/ConEmuPack.161002.7z
+location_exe=5482288,xEB19438B,https://github.com/Maximus5/ConEmu/releases/download/v16.10.02/ConEmuSetup.161002.exe
+md5_arc=06b4f50ea083518b08bb31bf75fb5e04
+md5_exe=1980ff97baa437b8fe0532dd720249be
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161002.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161002.exe?use_mirror=autoselect
