ConEmu 161009 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=161002
-location_arc=2829668,x2ADF0BA7,https://github.com/Maximus5/ConEmu/releases/download/v16.10.02/ConEmuPack.161002.7z
-location_exe=5482288,xEB19438B,https://github.com/Maximus5/ConEmu/releases/download/v16.10.02/ConEmuSetup.161002.exe
-md5_arc=06b4f50ea083518b08bb31bf75fb5e04
-md5_exe=1980ff97baa437b8fe0532dd720249be
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161002.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161002.exe?use_mirror=autoselect
+version=161009
+location_arc=2833903,x1BF59CEC,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09/ConEmuPack.161009.7z
+location_exe=5490256,x83FA1B45,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09/ConEmuSetup.161009.exe
+md5_arc=7968829c8bdbc0a943e8c011d27a1a58
+md5_exe=8abdf38b63434de522ad9055de15e4da
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161009.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161009.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=161002
-location_arc=2829668,x2ADF0BA7,https://github.com/Maximus5/ConEmu/releases/download/v16.10.02/ConEmuPack.161002.7z
-location_exe=5482288,xEB19438B,https://github.com/Maximus5/ConEmu/releases/download/v16.10.02/ConEmuSetup.161002.exe
-md5_arc=06b4f50ea083518b08bb31bf75fb5e04
-md5_exe=1980ff97baa437b8fe0532dd720249be
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161002.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161002.exe?use_mirror=autoselect
+version=161009
+location_arc=2833903,x1BF59CEC,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09/ConEmuPack.161009.7z
+location_exe=5490256,x83FA1B45,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09/ConEmuSetup.161009.exe
+md5_arc=7968829c8bdbc0a943e8c011d27a1a58
+md5_exe=8abdf38b63434de522ad9055de15e4da
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161009.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161009.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=161002
-location_arc=2829668,x2ADF0BA7,https://github.com/Maximus5/ConEmu/releases/download/v16.10.02/ConEmuPack.161002.7z
-location_exe=5482288,xEB19438B,https://github.com/Maximus5/ConEmu/releases/download/v16.10.02/ConEmuSetup.161002.exe
-md5_arc=06b4f50ea083518b08bb31bf75fb5e04
-md5_exe=1980ff97baa437b8fe0532dd720249be
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161002.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161002.exe?use_mirror=autoselect
+version=161009
+location_arc=2833903,x1BF59CEC,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09/ConEmuPack.161009.7z
+location_exe=5490256,x83FA1B45,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09/ConEmuSetup.161009.exe
+md5_arc=7968829c8bdbc0a943e8c011d27a1a58
+md5_exe=8abdf38b63434de522ad9055de15e4da
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161009.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161009.exe?use_mirror=autoselect
