--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=161009
-location_arc=2833903,x1BF59CEC,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09/ConEmuPack.161009.7z
-location_exe=5490256,x83FA1B45,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09/ConEmuSetup.161009.exe
-md5_arc=7968829c8bdbc0a943e8c011d27a1a58
-md5_exe=8abdf38b63434de522ad9055de15e4da
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161009.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161009.exe?use_mirror=autoselect
+version=161009a
+location_arc=2832413,x74E91FC4,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09a/ConEmuPack.161009a.7z
+location_exe=5484136,xE1F6182A,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09a/ConEmuSetup.161009a.exe
+md5_arc=88d95218fbd32013bef1ad825969f3d8
+md5_exe=75c0ce3ac8b6afb734d9f8ae37555b5f
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161009a.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161009a.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=161009
-location_arc=2833903,x1BF59CEC,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09/ConEmuPack.161009.7z
-location_exe=5490256,x83FA1B45,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09/ConEmuSetup.161009.exe
-md5_arc=7968829c8bdbc0a943e8c011d27a1a58
-md5_exe=8abdf38b63434de522ad9055de15e4da
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161009.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161009.exe?use_mirror=autoselect
+version=161009a
+location_arc=2832413,x74E91FC4,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09a/ConEmuPack.161009a.7z
+location_exe=5484136,xE1F6182A,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09a/ConEmuSetup.161009a.exe
+md5_arc=88d95218fbd32013bef1ad825969f3d8
+md5_exe=75c0ce3ac8b6afb734d9f8ae37555b5f
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161009a.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161009a.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=161009
-location_arc=2833903,x1BF59CEC,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09/ConEmuPack.161009.7z
-location_exe=5490256,x83FA1B45,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09/ConEmuSetup.161009.exe
-md5_arc=7968829c8bdbc0a943e8c011d27a1a58
-md5_exe=8abdf38b63434de522ad9055de15e4da
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161009.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161009.exe?use_mirror=autoselect
+version=161009a
+location_arc=2832413,x74E91FC4,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09a/ConEmuPack.161009a.7z
+location_exe=5484136,xE1F6182A,https://github.com/Maximus5/ConEmu/releases/download/v16.10.09a/ConEmuSetup.161009a.exe
+md5_arc=88d95218fbd32013bef1ad825969f3d8
+md5_exe=75c0ce3ac8b6afb734d9f8ae37555b5f
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161009a.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161009a.exe?use_mirror=autoselect
