ConEmu 161203 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=161022
-location_arc=2834379,xB35DC892,https://github.com/Maximus5/ConEmu/releases/download/v16.10.22/ConEmuPack.161022.7z
-location_exe=5488944,x2D50C470,https://github.com/Maximus5/ConEmu/releases/download/v16.10.22/ConEmuSetup.161022.exe
-md5_arc=ce982be6dd97a4a663d082de9dcd6cf1
-md5_exe=19dedd00f6abd90de2da706edbddfcec
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161022.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161022.exe?use_mirror=autoselect
+version=161203
+location_arc=2836989,xA885E8FF,https://github.com/Maximus5/ConEmu/releases/download/v16.12.03/ConEmuPack.161203.7z
+location_exe=5490480,x1D91973A,https://github.com/Maximus5/ConEmu/releases/download/v16.12.03/ConEmuSetup.161203.exe
+md5_arc=07b306c49dde1107fd46dbc8da4aa828
+md5_exe=ba7a8a82996a23926340daf5016f2f8c
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161203.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161203.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=161022
-location_arc=2834379,xB35DC892,https://github.com/Maximus5/ConEmu/releases/download/v16.10.22/ConEmuPack.161022.7z
-location_exe=5488944,x2D50C470,https://github.com/Maximus5/ConEmu/releases/download/v16.10.22/ConEmuSetup.161022.exe
-md5_arc=ce982be6dd97a4a663d082de9dcd6cf1
-md5_exe=19dedd00f6abd90de2da706edbddfcec
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161022.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161022.exe?use_mirror=autoselect
+version=161203
+location_arc=2836989,xA885E8FF,https://github.com/Maximus5/ConEmu/releases/download/v16.12.03/ConEmuPack.161203.7z
+location_exe=5490480,x1D91973A,https://github.com/Maximus5/ConEmu/releases/download/v16.12.03/ConEmuSetup.161203.exe
+md5_arc=07b306c49dde1107fd46dbc8da4aa828
+md5_exe=ba7a8a82996a23926340daf5016f2f8c
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161203.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161203.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=161022
-location_arc=2834379,xB35DC892,https://github.com/Maximus5/ConEmu/releases/download/v16.10.22/ConEmuPack.161022.7z
-location_exe=5488944,x2D50C470,https://github.com/Maximus5/ConEmu/releases/download/v16.10.22/ConEmuSetup.161022.exe
-md5_arc=ce982be6dd97a4a663d082de9dcd6cf1
-md5_exe=19dedd00f6abd90de2da706edbddfcec
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161022.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161022.exe?use_mirror=autoselect
+version=161203
+location_arc=2836989,xA885E8FF,https://github.com/Maximus5/ConEmu/releases/download/v16.12.03/ConEmuPack.161203.7z
+location_exe=5490480,x1D91973A,https://github.com/Maximus5/ConEmu/releases/download/v16.12.03/ConEmuSetup.161203.exe
+md5_arc=07b306c49dde1107fd46dbc8da4aa828
+md5_exe=ba7a8a82996a23926340daf5016f2f8c
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161203.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161203.exe?use_mirror=autoselect
